--- a/css/screen.css
+++ b/css/screen.css
@@ -68,7 +68,8 @@ html, body {
   background: #2e3434;
   z-index: 20;
   width: 300px;
-  height: 100%; }
+  height: 100%;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2); }
 
 .instructions {
   color: #9ea09f;
@@ -76,7 +77,9 @@ html, body {
   margin-bottom: 20px;
   text-align: center;
   font-size: 14px;
-  letter-spacing: 0.06em; }
+  letter-spacing: 0.06em;
+  line-height: 18px;
+  margin-top: -2px; }
 
 .btn-give-up {
   text-align: center;
@@ -120,11 +123,17 @@ html, body {
 .info-drawer {
   position: absolute;
   top: 0;
-  right: 300px;
+  right: 0;
   width: 240px;
   background: #232727;
   height: 100%;
-  padding: 30px; }
+  padding: 22px 30px;
+  z-index: 10;
+  transition: right 0.5s; }
+  .info-drawer.open {
+    right: 300px; }
+  .info-drawer.scroll {
+    overflow-y: scroll; }
 
 .timer-wrapper {
   padding: 26px 30px 30px;
@@ -191,18 +200,34 @@ input {
 .count-total {
   font-weight: 600; }
 
-.continent-list {
+.continent-list-wrapper {
   padding: 26px 30px 30px; }
+  .continent-list-wrapper .instructions {
+    margin-top: 30px; }
 
 .continent-list-item {
   color: #9ea09f;
   border-bottom: 1px solid #242828;
   padding-bottom: 4px;
-  margin-top: 20px; }
+  margin-top: 20px;
+  cursor: pointer; }
   .continent-list-item:first-child {
     margin-top: 0; }
+  .continent-list-item.active {
+    color: #eca554; }
 
 .continent-count-container {
   float: right; }
+
+.country-list-item {
+  color: #9c9e9d;
+  padding: 6px 0 8px;
+  border-top: 1px solid #2e3333;
+  text-transform: capitalize;
+  font-size: 14px; }
+  .country-list-item:first-child {
+    margin-top: 0;
+    padding-top: 0;
+    border: 0; }
 
 /*# sourceMappingURL=screen.css.map */
