--- a/css/scss/global.scss
+++ b/css/scss/global.scss
@@ -32,6 +32,7 @@ html, body {
   z-index: 20;
   width: 300px;
   height: 100%;
+  box-shadow: 0 0 10px 2px rgba(0,0,0,0.2);
 }
 
 .instructions{
@@ -41,6 +42,8 @@ html, body {
   text-align: center;
   font-size: 14px;
   letter-spacing: 0.06em;
+  line-height: 18px;
+  margin-top: -2px;
 }
 
 .btn-give-up{
@@ -89,11 +92,21 @@ html, body {
 .info-drawer{
   position: absolute;
   top: 0;
-  right: 300px;
+  right: 0;
   width: 240px;
   background: #232727;
   height: 100%;
-  padding: 30px;
+  padding: 22px 30px;
+  z-index: 10;
+  transition: right 0.5s;
+
+  &.open{
+    right: 300px;
+  }
+
+  &.scroll{
+    overflow-y: scroll;
+  }
 }
 
 
@@ -188,8 +201,16 @@ input{
 
 // Contintent listing with current and total count
 
-.continent-list{
+.continent-list-wrapper{
   padding: 26px 30px 30px;
+
+  .instructions{
+    margin-top: 30px;
+  }
+}
+
+.continent-list{
+
 }
 
 .continent-list-item{
@@ -197,9 +218,14 @@ input{
   border-bottom: 1px solid #242828;
   padding-bottom: 4px;
   margin-top: 20px;
+  cursor: pointer;
 
   &:first-child{
     margin-top: 0;
+  }
+
+  &.active{
+    color: #eca554;
   }
 }
 
@@ -212,4 +238,25 @@ input{
 
 .start-overlay{
 
+}
+
+
+// Country list inside of data drawer
+
+.country-list{
+
+}
+
+.country-list-item{
+  color: #9c9e9d;
+  padding: 6px 0 8px;
+  border-top: 1px solid #2e3333;
+  text-transform: capitalize;
+  font-size: 14px;
+
+  &:first-child{
+    margin-top: 0;
+    padding-top: 0;
+    border: 0;
+  }
 }
