--- a/css/screen.css
+++ b/css/screen.css
@@ -135,6 +135,22 @@ html, body {
   .info-drawer.scroll {
     overflow-y: scroll; }
 
+.info-drawer-message {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #9c9e9d;
+  width: 100%;
+  line-height: 18px;
+  padding: 0 30px;
+  text-align: center;
+  font-weight: 300;
+  letter-spacing: 0.04em;
+  font-size: 14px; }
+  .open .info-drawer-message {
+    display: none; }
+
 .timer-wrapper {
   padding: 26px 30px 30px;
   border-bottom: 1px dotted #1f2323;
