--- a/css/scss/global.scss
+++ b/css/scss/global.scss
@@ -92,13 +92,12 @@ html, body {
 .info-drawer{
   position: absolute;
   top: 0;
-  right: 0;
+  right: 60px;
   width: 240px;
   background: #232727;
   height: 100%;
-  padding: 22px 30px;
   z-index: 10;
-  transition: right 0.5s;
+  transition: right 0.4s;
 
   &.open{
     right: 300px;
@@ -106,6 +105,35 @@ html, body {
 
   &.scroll{
     overflow-y: scroll;
+  }
+}
+
+.info-drawer-content{
+  position: relative;
+  height: 100%;
+  width: 100%;
+  
+  .nano-content{
+    padding: 22px 30px;
+  }
+
+  &:after,
+  &:before{
+    content: '';
+    width: 230px;
+    height: 22px;
+    position: absolute;
+    left: 0;
+    background: #232727;
+    z-index: 20;
+  }
+
+  &:after{
+    top: 0;
+  }
+
+  &:before{
+    bottom: 0;
   }
 }
 
