--- a/css/screen.css
+++ b/css/screen.css
@@ -30,7 +30,7 @@ footer, header, hgroup, menu, nav, section {
 body {
   line-height: 1; }
 
-ol, ul {
+ul {
   list-style: none; }
 
 blockquote, q {
@@ -153,20 +153,6 @@ html, body {
   .info-drawer-content:before {
     bottom: 0; }
 
-.info-drawer-message {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #9c9e9d;
-  width: 100%;
-  line-height: 18px;
-  padding: 0 30px;
-  text-align: center;
-  font-weight: 300;
-  letter-spacing: 0.04em;
-  font-size: 14px; }
-
 .timer-wrapper {
   padding: 26px 30px 30px;
   border-bottom: 1px dotted #1f2323;
@@ -251,16 +237,33 @@ input {
 .continent-count-container {
   float: right; }
 
+.country-list {
+  counter-reset: item;
+  list-style-type: none; }
+
 .country-list-item {
   color: #9c9e9d;
-  padding: 6px 0 8px;
+  padding: 6px 0 8px 20px;
   border-top: 1px solid #2e3333;
   text-transform: capitalize;
-  font-size: 14px; }
+  font-size: 12px;
+  position: relative;
+  min-height: 31px; }
   .country-list-item:first-child {
     margin-top: 0;
     padding-top: 0;
     border: 0; }
+  .country-list-item:before {
+    content: counter(item) " ";
+    counter-increment: item;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0; }
+
+.country-list-item-text {
+  font-size: 14px;
+  line-height: 16px; }
 
 /** initial setup **/
 .nano > .nano-content {
