--- a/css/scss/global.scss
+++ b/css/scss/global.scss
@@ -114,7 +114,7 @@ html, body {
   width: 100%;
 
   .nano-content{
-    padding: 22px 30px;
+    padding: 16px 30px 14px;
   }
 
   &:after,
@@ -287,7 +287,6 @@ input{
 
   &:first-child{
     margin-top: 0;
-    padding-top: 0;
     border: 0;
   }
 
