--- a/css/screen.css
+++ b/css/screen.css
@@ -61,6 +61,23 @@ html, body {
   height: 100%;
   background-color: #b3d1fd; }
 
+.answer-indicator {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 5;
+  pointer-events: none;
+  display: block;
+  transition: background 0.25s;
+  background: transparent;
+  opacity: 0.5; }
+  .answer-indicator.correct {
+    background: #179714; }
+  .answer-indicator.incorrect {
+    background: #ac1818; }
+
 .stage {
   position: absolute;
   top: 0;
@@ -263,7 +280,6 @@ input {
   color: #9c9e9d;
   padding: 6px 0 8px 20px;
   border-top: 1px solid #2e3333;
-  text-transform: capitalize;
   font-size: 12px;
   position: relative;
   min-height: 31px; }
