--- a/css/scss/global.scss
+++ b/css/scss/global.scss
@@ -21,6 +21,30 @@ html, body {
 }
 
 
+//
+.answer-indicator{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 5;
+  pointer-events: none;
+  display: block;
+  transition: background 0.25s;
+  background: transparent;
+  opacity: 0.5;
+
+  &.correct{
+    background: #179714;
+  }
+
+  &.incorrect{
+    background: #ac1818;
+  }
+}
+
+
 
 // Global Styles
 
@@ -301,7 +325,6 @@ input{
   color: #9c9e9d;
   padding: 6px 0 8px 20px;
   border-top: 1px solid #2e3333;
-  text-transform: capitalize;
   font-size: 12px;
   position: relative;
   min-height: 31px;
