--- a/css/scss/global.scss
+++ b/css/scss/global.scss
@@ -21,30 +21,6 @@ html, body {
 }
 
 
-//
-.answer-indicator{
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 5;
-  pointer-events: none;
-  display: block;
-  transition: background 0.25s;
-  background: transparent;
-  opacity: 0.5;
-
-  &.correct{
-    background: #179714;
-  }
-
-  &.incorrect{
-    background: #ac1818;
-  }
-}
-
-
 
 // Global Styles
 
@@ -98,6 +74,14 @@ html, body {
   background: rgba(0, 0, 0, 0.9);
   height: 100%;
   width: 100%;
+  position: relative;
+}
+
+.map-overlay-content{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .instructions-dialogue{
@@ -188,7 +172,7 @@ html, body {
 
 .timer-wrapper{
   padding: 26px 30px 30px;
-  border-bottom: 1px dotted #1f2323;
+  border-bottom: 1px solid #242828;
   font-size: 0;
   text-align: center;
 }
@@ -233,8 +217,8 @@ html, body {
 .input-wrapper{
   padding: 26px 30px 30px;
   background: #292e2e;
-  border-top: 1px dotted #1f2323;
-  border-bottom: 1px dotted #1f2323;
+  border-top: 1px solid #242828;
+  border-bottom: 1px solid #242828;
 }
 
 input{
@@ -250,6 +234,15 @@ input{
   font-weight: 400;
   font-style: italic;
   text-align: center;
+  transition: background 0.1s;
+
+  &.correct{
+    background: #ccffbe;
+  }
+
+  &.incorrect{
+    background: #ffaeae;
+  }
 }
 
 
@@ -311,6 +304,50 @@ input{
 
 .start-overlay{
 
+}
+
+.game-title{
+  margin-bottom: 60px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 72px;
+  border-bottom: 1px solid #e82424;
+  display: inline-block;
+  color: #ddd0a6;
+}
+
+.game-type-wrapper{
+  position: relative;
+}
+
+.game-type{
+  border-radius: 8px;
+  display: inline-block;
+  font-size: 0;
+  overflow: hidden;
+  background: #333;
+}
+
+.game-type-item{
+  display: inline-block;
+  padding: 18px 26px 20px 26px;
+  cursor: pointer;
+
+  &:first-child{
+    border: 0;
+  }
+
+  &.active{
+    background: #eca54a;
+  }
+}
+
+.game-type-title{
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 300;
+  font-size: 26px;
+  letter-spacing: 0.03em;
+  display: inline-block;
 }
 
 
