--- a/css/screen.css
+++ b/css/screen.css
@@ -45,6 +45,27 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+@font-face {
+  font-family: 'iconfont';
+  src: url("../fonts/iconfont.eot?2r9f5v");
+  src: url("../fonts/iconfont.eot?#iefix2r9f5v") format("embedded-opentype"), url("../fonts/iconfont.ttf?2r9f5v") format("truetype"), url("../fonts/iconfont.woff?2r9f5v") format("woff"), url("../fonts/iconfont.svg?2r9f5v#iconfont") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+[class^="icon-"], [class*=" icon-"] {
+  font-family: 'iconfont';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
+
+.icon-arrow-right:before {
+  content: "\e600"; }
+
 /* apply a natural box layout model to all elements, but allowing components to change */
 html {
   box-sizing: border-box; }
@@ -54,7 +75,11 @@ html {
 
 html, body {
   height: 100%;
-  font-family: 'Lato', sans-serif; }
+  font-family: 'Lato', sans-serif;
+  -webkit-font-smoothing: antialiased; }
+
+a {
+  text-decoration: none; }
 
 #map {
   width: 100%;
@@ -73,11 +98,11 @@ html, body {
 
 .instructions {
   color: #9ea09f;
-  font-weight: 300;
+  font-weight: 400;
   margin-bottom: 20px;
   text-align: center;
   font-size: 14px;
-  letter-spacing: 0.06em;
+  letter-spacing: 0.04em;
   line-height: 18px;
   margin-top: -2px; }
 
@@ -113,7 +138,8 @@ html, body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%); }
+  transform: translate(-50%, -50%);
+  width: 100%; }
 
 .instructions-dialogue {
   position: relative;
@@ -124,8 +150,7 @@ html, body {
   padding: 26px 40px;
   display: inline-block;
   font-size: 16px;
-  font-weight: 300;
-  letter-spacing: 0.04em; }
+  letter-spacing: 0.02em; }
 
 .info-drawer {
   position: absolute;
@@ -198,9 +223,9 @@ html, body {
 
 .btn-pause {
   background: #eca54a;
-  color: #fff;
-  font-weight: 300;
-  letter-spacing: 0.04em;
+  color: #64461f;
+  font-weight: 400;
+  letter-spacing: 0.02em;
   display: inline-block;
   font-size: 14px;
   padding: 6px 10px;
@@ -272,35 +297,71 @@ input {
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
   font-size: 72px;
-  border-bottom: 1px solid #e82424;
-  display: inline-block;
-  color: #ddd0a6; }
+  font-weight: 700;
+  color: #fff;
+  display: inline-block; }
 
 .game-type-wrapper {
-  position: relative; }
+  position: relative;
+  overflow: hidden;
+  border-radius: 8px;
+  display: block; }
 
 .game-type {
-  border-radius: 8px;
   display: inline-block;
   font-size: 0;
-  overflow: hidden;
-  background: #333; }
+  background: #333;
+  position: relative;
+  border-radius: 8px;
+  box-shadow: inset -5px -33px 35px -6px rgba(0, 0, 0, 0.1);
+  margin-bottom: 40px; }
+  .game-type:before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    content: '';
+    background: #eca54a;
+    z-index: 5;
+    box-shadow: inset -5px 28px 35px -6px rgba(255, 255, 255, 0.1);
+    transition: all 0.4s;
+    border-radius: 8px; }
+  .game-type.pos-2:before {
+    left: 50%; }
 
 .game-type-item {
   display: inline-block;
-  padding: 18px 26px 20px 26px;
-  cursor: pointer; }
-  .game-type-item:first-child {
-    border: 0; }
-  .game-type-item.active {
-    background: #eca54a; }
-
-.game-type-title {
+  padding: 18px 30px 20px;
+  cursor: pointer;
+  position: relative;
+  z-index: 10;
   font-family: 'Source Sans Pro', sans-serif;
-  font-weight: 300;
+  font-weight: 400;
   font-size: 26px;
-  letter-spacing: 0.03em;
-  display: inline-block; }
+  letter-spacing: 0.01em;
+  display: inline-block;
+  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5); }
+
+.game-type-description {
+  font-size: 18px;
+  line-height: 28px;
+  padding: 20px 20px;
+  display: inline-block;
+  background: rgba(51, 51, 51, 0.4);
+  border-radius: 4px;
+  width: 640px;
+  color: #a5a5a5;
+  text-align: left;
+  transition: all 0.2s;
+  bottom: 0px;
+  position: relative; }
+  .game-type-description.hidden {
+    bottom: -60px;
+    opacity: 0; }
+
+.game-type-description[data-type="endurance"] {
+  display: none; }
 
 .country-list {
   counter-reset: item;
@@ -327,6 +388,55 @@ input {
 .country-list-item-text {
   font-size: 14px;
   line-height: 16px; }
+
+.nav-primary {
+  position: absolute;
+  top: 30px;
+  left: 30px; }
+
+.nav-primary-item {
+  font-weight: 600;
+  display: inline-block;
+  margin-left: 18px;
+  cursor: pointer;
+  color: #a5a5a5; }
+  .nav-primary-item:first-child {
+    margin-left: 0; }
+  .nav-primary-item.active {
+    color: #eca54a; }
+
+.instruction-indicator {
+  position: absolute;
+  right: 30px; }
+
+.instruction-indicator[data-type="timer"] {
+  top: 30px; }
+
+.instruction-indicator[data-type="input"] {
+  top: 254px; }
+
+.instruction-indicator[data-type="continents"] {
+  top: 458px; }
+
+.instruction-indicator[data-type="forfeit"] {
+  bottom: 22px; }
+  .instruction-indicator[data-type="forfeit"] .instruction-arrow {
+    position: relative;
+    top: 8px; }
+
+.instruction-arrow,
+.instruction-details {
+  display: inline-block;
+  vertical-align: middle; }
+
+.instruction-arrow {
+  margin-left: 10px;
+  color: #eca54a; }
+
+.instruction-details {
+  text-align: right;
+  line-height: 20px;
+  color: #595959; }
 
 /** initial setup **/
 .nano > .nano-content {
