--- a/css/scss/global.scss
+++ b/css/scss/global.scss
@@ -9,6 +9,11 @@ html {
 html, body {
   height: 100%;
   font-family: 'Lato', sans-serif;
+  -webkit-font-smoothing: antialiased;
+}
+
+a{
+  text-decoration: none;
 }
 
 
@@ -37,11 +42,11 @@ html, body {
 
 .instructions{
   color: #9ea09f;
-  font-weight: 300;
+  font-weight: 400;
   margin-bottom: 20px;
   text-align: center;
   font-size: 14px;
-  letter-spacing: 0.06em;
+  letter-spacing: 0.04em;
   line-height: 18px;
   margin-top: -2px;
 }
@@ -82,6 +87,7 @@ html, body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 100%;
 }
 
 .instructions-dialogue{
@@ -93,8 +99,7 @@ html, body {
   padding: 26px 40px;
   display: inline-block;
   font-size: 16px;
-  font-weight: 300;
-  letter-spacing: 0.04em;
+  letter-spacing: 0.02em;
 }
 
 .info-drawer{
@@ -197,9 +202,9 @@ html, body {
 
 .btn-pause{
   background: #eca54a;
-  color: #fff;
-  font-weight: 300;
-  letter-spacing: 0.04em;
+  color: #64461f;
+  font-weight: 400;
+  letter-spacing: 0.02em;
   display: inline-block;
   font-size: 14px;
   padding: 6px 10px;
@@ -311,43 +316,82 @@ input{
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
   font-size: 72px;
-  border-bottom: 1px solid #e82424;
+  font-weight: 700;
+  color: #fff;
   display: inline-block;
-  color: #ddd0a6;
 }
 
 .game-type-wrapper{
   position: relative;
+  overflow: hidden;
+  border-radius: 8px;
+  display: block;
 }
 
 .game-type{
-  border-radius: 8px;
   display: inline-block;
   font-size: 0;
-  overflow: hidden;
   background: #333;
+  position: relative;
+  border-radius: 8px;
+  box-shadow: inset -5px -33px 35px -6px rgba(0, 0, 0, 0.1);
+  margin-bottom: 40px;
+
+  &:before{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    content: '';
+    background: #eca54a;
+    z-index: 5;
+    box-shadow: inset -5px 28px 35px -6px rgba(255, 255, 255, 0.1);
+    transition: all 0.4s;
+    border-radius: 8px;
+  }
+
+  &.pos-2:before{
+    left: 50%;
+  }
 }
 
 .game-type-item{
   display: inline-block;
-  padding: 18px 26px 20px 26px;
+  padding: 18px 30px 20px;
   cursor: pointer;
+  position: relative;
+  z-index: 10;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 400;
+  font-size: 26px;
+  letter-spacing: 0.01em;
+  display: inline-block;
+  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
+}
 
-  &:first-child{
-    border: 0;
-  }
+.game-type-description{
+  font-size: 18px;
+  line-height: 28px;
+  padding: 20px 20px;
+  display: inline-block;
+  background: rgba(51, 51, 51, 0.4);
+  border-radius: 4px;
+  width: 640px;
+  color: #a5a5a5;
+  text-align: left;
+  transition: all 0.2s;
+  bottom: 0px;
+  position: relative;
 
-  &.active{
-    background: #eca54a;
+  &.hidden{
+    bottom: -60px;
+    opacity: 0;
   }
 }
 
-.game-type-title{
-  font-family: 'Source Sans Pro', sans-serif;
-  font-weight: 300;
-  font-size: 26px;
-  letter-spacing: 0.03em;
-  display: inline-block;
+.game-type-description[data-type="endurance"]{
+  display: none;
 }
 
 
@@ -384,4 +428,77 @@ input{
 .country-list-item-text{
   font-size: 14px;
   line-height: 16px;
+}
+
+
+
+// Nav Primary
+
+.nav-primary{
+  position: absolute;
+  top: 30px;
+  left: 30px;
+}
+
+.nav-primary-item{
+  font-weight: 600;
+  display: inline-block;
+  margin-left: 18px;
+  cursor: pointer;
+  color: #a5a5a5;
+
+  &:first-child{
+    margin-left: 0;
+  }
+
+  &.active{
+    color: #eca54a;
+  }
+}
+
+
+
+// Instruction Indicators
+
+.instruction-indicator{
+  position: absolute;
+  right: 30px;
+}
+
+.instruction-indicator[data-type="timer"]{
+  top: 30px;
+}
+
+.instruction-indicator[data-type="input"]{
+  top: 254px;
+}
+
+.instruction-indicator[data-type="continents"]{
+  top: 458px;
+}
+
+.instruction-indicator[data-type="forfeit"]{
+  bottom: 22px;
+
+  .instruction-arrow{
+    position: relative;
+    top: 8px;
+  }
+}
+
+.instruction-arrow,
+.instruction-details{
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.instruction-arrow{
+  margin-left: 10px;
+  color: #eca54a;
+}
+
+.instruction-details{
+  text-align: right;
+  line-height: 20px;
+  color: #595959;
 }
