--- a/css/screen.css
+++ b/css/screen.css
@@ -45,27 +45,6 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-@font-face {
-  font-family: 'iconfont';
-  src: url("../fonts/iconfont.eot?2r9f5v");
-  src: url("../fonts/iconfont.eot?#iefix2r9f5v") format("embedded-opentype"), url("../fonts/iconfont.ttf?2r9f5v") format("truetype"), url("../fonts/iconfont.woff?2r9f5v") format("woff"), url("../fonts/iconfont.svg?2r9f5v#iconfont") format("svg");
-  font-weight: normal;
-  font-style: normal; }
-[class^="icon-"], [class*=" icon-"] {
-  font-family: 'iconfont';
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; }
-
-.icon-arrow-right:before {
-  content: "\e600"; }
-
 /* apply a natural box layout model to all elements, but allowing components to change */
 html {
   box-sizing: border-box; }
@@ -97,7 +76,7 @@ a {
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2); }
 
 .instructions {
-  color: #9ea09f;
+  color: #eca54a;
   font-weight: 400;
   margin-bottom: 20px;
   text-align: center;
@@ -241,7 +220,7 @@ a {
   border-top: 1px solid #242828;
   border-bottom: 1px solid #242828; }
 
-input {
+.answer-input {
   background: #fff;
   border: 0;
   outline: 0;
@@ -255,9 +234,9 @@ input {
   font-style: italic;
   text-align: center;
   transition: background 0.1s; }
-  input.correct {
+  .answer-input.correct {
     background: #ccffbe; }
-  input.incorrect {
+  .answer-input.incorrect {
     background: #ffaeae; }
 
 .score-wrapper {
@@ -405,38 +384,29 @@ input {
   .nav-primary-item.active {
     color: #eca54a; }
 
-.instruction-indicator {
+.checkbox-container {
+  position: relative;
+  padding-left: 24px;
+  margin-top: 10px;
+  display: block; }
+
+.checkbox-input,
+.checkbox-label {
+  cursor: pointer; }
+
+.checkbox-input {
   position: absolute;
-  right: 30px; }
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  margin-left: 0;
+  margin-right: 0; }
 
-.instruction-indicator[data-type="timer"] {
-  top: 30px; }
-
-.instruction-indicator[data-type="input"] {
-  top: 254px; }
-
-.instruction-indicator[data-type="continents"] {
-  top: 458px; }
-
-.instruction-indicator[data-type="forfeit"] {
-  bottom: 22px; }
-  .instruction-indicator[data-type="forfeit"] .instruction-arrow {
-    position: relative;
-    top: 8px; }
-
-.instruction-arrow,
-.instruction-details {
-  display: inline-block;
-  vertical-align: middle; }
-
-.instruction-arrow {
-  margin-left: 10px;
-  color: #eca54a; }
-
-.instruction-details {
-  text-align: right;
-  line-height: 20px;
-  color: #595959; }
+.checkbox-label {
+  font-size: 14px;
+  color: #9ea09f;
+  position: relative;
+  top: 2px; }
 
 /** initial setup **/
 .nano > .nano-content {
