Disabled input + focus features
- On pause and forfeit the input is now disabled, preventing cheating
- On key press the :focus goes to the input

--- a/css/screen.css
+++ b/css/screen.css
@@ -408,6 +408,9 @@ a {
   position: relative;
   top: 2px; }
 
+.gameover-overlay {
+  display: none; }
+
 /** initial setup **/
 .nano > .nano-content {
   position: absolute;
