--- a/src/css/App.css
+++ b/src/css/App.css
@@ -159,10 +159,6 @@ font-size: 12px;
   border-bottom: 1px dashed lightgrey;
 }
 
-/*.list__col__item:last-child:after {
-  display: none;
-}*/
-
 .list__col__item--active {
   background: yellow;
 }
@@ -217,13 +213,19 @@ font-size: 12px;
 
 .columnHeadings {
   display: flex;
-}
-
-.columnHeadings + .list {
-  border-top: 1px solid #959595;
+  border-bottom: 1px solid #959595;
   margin-top: -1px;
 }
 
-.map {
+.map-wrapper {
+  width: 100%;
+  position: relative;
+}
 
+.map {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
