--- a/src/css/App.css
+++ b/src/css/App.css
@@ -229,3 +229,23 @@ font-size: 12px;
   top: 0;
   left: 0;
 }
+
+.map__legend {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  background: #fff;
+  border-radius: 4px;
+  box-shadow: 0 1px 5px rgba(0,0,0,0.65);
+  z-index: 100;
+  padding: 10px;
+}
+
+.marker-countries {
+  opacity: 0;
+  transition: opacity 0.1s;
+}
+
+.markers-hidden .marker-countries {
+  opacity: 1;
+}
